cmake_minimum_required(VERSION 3.15)
project(sandbox)

set(CMAKE_CXX_STANDARD 17)

add_executable(sandbox first.cpp second.cpp third.cpp classes/Bank.cpp classes/Bank.h classes/Smartphone.cpp classes/Smartphone.h fourth.cpp classes/Tree.cpp classes/Tree.h classes/Vector.cpp classes/Vector.h classes/File.cpp classes/File.h fifth.cpp classes/Cuboid.cpp classes/Cuboid.h classes/Segment.cpp classes/Segment.h classes/Point.cpp classes/Point.h classes/Circle.cpp classes/Circle.h classes/Student.cpp classes/Student.h)